update species tabs

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                         <button data-button="content-3" class="species__btn">Flower Pot</button>
                         <button data-button="content-4" class="species__btn">Potted Plant</button>
                     </div>
-                    <button data-button="content-5" class="species__btn">See All</button>
+                    <a href="#" class="species__all">See All</a>
                 </div>
                 <div class="species__contents">
                     <div id="content-1" class="species__content species__content-active">
@@ -186,10 +186,207 @@
                             </div>
                         </div>
                     </div>
-                    <div id="content-2" class="species__content">2</div>
-                    <div id="content-3" class="species__content">3</div>
-                    <div id="content-4" class="species__content">4</div>
-                    <div id="content-5" class="species__content">5</div>
+                    <div id="content-2" class="species__content">
+                        <div class="species__card species__card-active">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Fruit-bearing plants</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates repellendus
+                                    placeat aspernatur nobis exercitationem, ipsam aperiam rem. Voluptates incidunt
+                                    dolorum, magni, atque temporibus enim natus dolore porro itaque saepe quaerat
+                                    officia maiores? Voluptatibus obcaecati aut, a suscipit veritatis expedita?
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Foliage Plants</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates repellendus
+                                    placeat aspernatur nobis exercitationem, ipsam aperiam rem. Voluptates incidunt
+                                    dolorum, magni, atque temporibus enim natus dolore porro itaque saepe quaerat
+                                    officia maiores?
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Ferns</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates repellendus
+                                    placeat aspernatur nobis exercitationem, ipsam aperiam rem. Voluptates incidunt
+                                    dolorum, magni, atque temporibus enim natus dolore porro itaque saepe quaerat
+                                    officia maiores?
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="content-3" class="species__content">
+                        <div class="species__card species__card-active">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Indoor flowers</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nesciunt
+                                    perspiciatis, ex voluptates fuga magnam asperiores doloribus beatae.
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Seasonal flowers</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis in quos odio
+                                    dolores asperiores perspiciatis, veritatis labore fuga aliquid reiciendis, quam
+                                    molestiae consectetur sit.
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Tropical flowers</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis in quos odio
+                                    dolores asperiores perspiciatis, veritatis labore fuga aliquid reiciendis, quam
+                                    molestiae consectetur sit. Lorem ipsum dolor sit amet consectetur adipisicing. Lorem
+                                    ipsum dolor sit amet.
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="content-4" class="species__content">
+                        <div class="species__card species__card-active">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Herbs</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nesciunt
+                                    perspiciatis, ex voluptates fuga magnam asperiores doloribus beatae. Lorem ipsum
+                                    dolor sit amet consectetur adipisicing elit. Repellendus minus quo ducimus
+                                    molestiae, amet culpa commodi.
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Perennials</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nesciunt
+                                    perspiciatis, ex voluptates fuga magnam asperiores doloribus beatae. Lorem ipsum
+                                    dolor sit amet, consectetur adipisicing elit. Tempora quo autem et libero magni
+                                    adipisci voluptatum ut molestiae consectetur vel!
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Air-purifying plants</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nesciunt
+                                    perspiciatis, ex voluptates fuga magnam asperiores doloribus beatae. Lorem ipsum
+                                    dolor sit amet, consectetur adipisicing elit. Tempora quo autem et libero magni
+                                    adipisci voluptatum ut molestiae consectetur vel!
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
