add scroll btn with tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -693,8 +693,14 @@
                 </div>
             </div>
         </footer>
+
     </main>
 
+    <button uk-tooltip="Scroll" class="section-btn">
+        <img src="assets/images/icons/general/section-btn.svg" alt="scroll to next section btn">
+
+        <span class="tooltip">Scroll to next section</span>
+    </button>
 </body>
 
 </html>
