--- a/src/index.html
+++ b/src/index.html
@@ -662,36 +662,38 @@
         </section>
 
         <footer class="footer">
-            <div class="footer__inner">
-                <div class="footer__top">
-                    <img class="footer__logo" src="assets/images/icons/header/logo.svg" alt="logo">
+            <section>
+                <div class="footer__inner">
+                    <div class="footer__top">
+                        <img class="footer__logo" src="assets/images/icons/header/logo.svg" alt="logo">
+                    </div>
+                    <div class="footer__title">Join the Community!</div>
+                    <p class="footer__text">
+                        Subscribe to The Forager to receive monthly plant tips,
+                        store updates, promotions & more
+                    </p>
+                    <div class="footer__socials">
+                        <ul class="footer__list">
+                            <li>
+                                <a href="#" class="footer__link">Instagram</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer__link">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer__link">Linkedin</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer__link">Whatsapp</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer__link">Pinterest</a>
+                            </li>
+                        </ul>
+                        <p class="footer__rights">©2023, All Right Reserved.</p>
+                    </div>
                 </div>
-                <div class="footer__title">Join the Community!</div>
-                <p class="footer__text">
-                    Subscribe to The Forager to receive monthly plant tips,
-                    store updates, promotions & more
-                </p>
-                <div class="footer__socials">
-                    <ul class="footer__list">
-                        <li>
-                            <a href="#" class="footer__link">Instagram</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Twitter</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Linkedin</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Whatsapp</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Pinterest</a>
-                        </li>
-                    </ul>
-                    <p class="footer__rights">©2023, All Right Reserved.</p>
-                </div>
-            </div>
+            </section>
         </footer>
 
     </main>
