update performance and accessibility by lighthouse

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                         gro
                         <div>
                             w
-                            <img src="assets/images/intro/leaf.png" loading="lazy" alt="hover leaf">
+                            <img src="assets/images/intro/leaf.png" width="487" height="481" loading="lazy" alt="hover leaf">
                         </div>
                         th
                     </h2>
@@ -66,13 +66,13 @@
 
                 <div class="intro__plants">
                     <div class="intro__descr">
-                        <h4>100+ Plants</h4>
+                        <h3>100+ Plants</h3>
                         <p>We want our visitors to be inspire to get their hands dirty</p>
                     </div>
                     <div class="intro__images">
-                        <img src="assets/images/intro/plants/1.jpg" loading="lazy" alt="plant 1">
-                        <img src="assets/images/intro/plants/2.jpg" loading="lazy" alt="plant 2">
-                        <img src="assets/images/intro/plants/3.jpg" loading="lazy" alt="plant 3">
+                        <img src="assets/images/intro/plants/1.jpg" width="72" height="72" alt="plant 1">
+                        <img src="assets/images/intro/plants/2.jpg" width="72" height="72" alt="plant 2">
+                        <img src="assets/images/intro/plants/3.jpg" width="72" height="72" alt="plant 3">
                     </div>
                 </div>
             </div>
@@ -405,11 +405,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/1.jpg" class="new__img" alt="Peperomia Plants">
-                                <button class="new__favorite">add to favorite</button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Peperomia Plants</h4>
+                                    <h5 class="new__name">Peperomia Plants</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹122,056</div>
                                 </div>
@@ -421,11 +421,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/7.jpg" class="new__img" alt="Podocarpus Macrophyllus">
-                                <button class="new__favorite">add to favorite</button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Podocarpus Macrophyllus</h4>
+                                    <h5 class="new__name">Podocarpus Macrophyllus</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹142,081</div>
                                 </div>
@@ -437,11 +437,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/2.jpg" class="new__img" alt="Fiddle-Leaf Fig">
-                                <button class="new__favorite">add to favorite</button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Fiddle-Leaf Fig</h4>
+                                    <h5 class="new__name">Fiddle-Leaf Fig</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹162,056</div>
                                 </div>
@@ -453,11 +453,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/3.jpg" class="new__img" alt="Calathea Orbifolia">
-                                <button class="new__favorite">add to favorite</button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Calathea Orbifolia</h4>
+                                    <h5 class="new__name">Calathea Orbifolia</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹102,056</div>
                                 </div>
@@ -469,11 +469,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/4.jpg" class="new__img" alt="Mentha Divina">
-                                <button class="new__favorite">add to favorite</button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Mentha Divina</h4>
+                                    <h5 class="new__name">Mentha Divina</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹112,020</div>
                                 </div>
@@ -485,11 +485,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/5.jpg" class="new__img" alt="Begonia Maculata">
-                                <button class="new__favorite">add to favorite</button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Begonia Maculata</h4>
+                                    <h5 class="new__name">Begonia Maculata</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹187,090</div>
                                 </div>
@@ -501,11 +501,11 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/6.jpg" class="new__img" alt="Caladium Bicolor">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite" aria-label="Add to favorites">Add to favorites</button>
                             </div>
                             <div class="new__about">
                                 <div>
-                                    <h4 class="new__name">Caladium Bicolor</h4>
+                                    <h5 class="new__name">Caladium Bicolor</h5>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹115,048</div>
                                 </div>
