--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plantique</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 
 <body>
@@ -54,7 +58,8 @@
                         gro
                         <div>
                             w
-                            <img src="assets/images/intro/leaf.png" width="487" height="481" loading="lazy" alt="hover leaf">
+                            <img src="assets/images/intro/leaf.png" width="487" height="481" loading="lazy"
+                                alt="hover leaf">
                         </div>
                         th
                     </h2>
